# Flipcraft

./: .gitignore  application.fam  flipcraft.h  main.cpp
.catalog/: manifest.yml
assets/: textures.inc
assets/worlds/: mini.fcw  world.fcw
audio/: audio.cpp  audio.h
game/: data.cpp  game.cpp  game.h  world.cpp
menu/: menu.cpp  menu.h
platform/f7fz/: platform.cpp
platform/sfml/: CMakeLists.txt  Makefile  flipcraft-sfml  main.cpp  platform.cpp  platform.h  world.fcw
render/: gui.cpp  gui.h  render.cpp  render.h
tools/: mapview.py  worldgen.py  worldold.py
